# Scorp

./: .gitignore  CMakeLists.txt  LICENSE  Scorp.pro
Allocator/: a.out  alloc.cpp  list_of_memory_nodes.cpp  pool_allocator.cpp  seglist_allocator.cpp  stl_allocator.cpp  stl_allocator.h  test.cpp
Allocator_test/: test.cpp
DB/: ScorpDB.cpp  ScorpDB.db  ScorpDBObject.h  ScorpDBSell.cpp  ScorpDBSell.h  ScorpDBShell.cpp  ScorpDBShell.h  ScorpExceptions.h  Tables.h
DB/example/: Makefile  a.out  hello.cpp
DB/sqlite/include/: Column.h  Transaction.h
DB/sqlite/src/: Backup.cpp  Column.cpp  Transaction.cpp
DBDev/: ScorpDB.cpp  ScorpDBInterface.h  ScorpDBSell.cpp  ScorpDBSell.h  ScorpExceptions.h  Tables.h  main.cpp
DBdev/: ScorpDB.cpp  ScorpDB.h  main.cpp
GUI/: PetriNetComponents.h  PetriNetUsing.h  UserInfo.h  main.cpp  mainwindow.cpp  mainwindow.h
GUI/Map/: GraphicsObjectsGroup.cpp  LinkGraphicsObject.cpp  LinkGraphicsObject.h  MapScene.cpp  MapScene.h  MarkerCommandQueue.cpp  MarkerCommandQueue.h  PointGraphicsObject.cpp  PointGraphicsObject.h  TrackGraphicsObject.cpp
GUI/StationsList/: StationsListModel.cpp  TreeModelItem.cpp  TreeModelItem.h
Scorp/: Scorp.pro  mainwindow.cpp  mainwindow.h
Scorp/Map/: GraphObject.cpp  GraphObject.h  GraphicsObjectGroup.cpp  MapScene.cpp  MapScene.h  PointGraphicsObject.cpp  PointGraphicsObject.h  StateGraphicsObject.cpp  StateGraphicsObject.h  TrackGraphicsObject.cpp  TrackGraphicsObject.h  TransitionGraphicsObject.cpp  TransitionGraphicsObject.h
Scorp/StationsList/: StationsListModel.cpp  StationsListModel.h  TreeModel.cpp  TreeModel.h  TreeModelItem.cpp  TreeModelItem.h
ScorpGUI/: Scorp.pro  UserInfo.cpp  UserInfo.h  main.cpp  mainwindow.cpp  mainwindow.h
ScorpGUI/DB/: ScorpDB.cpp  ScorpDB.db  ScorpDBInterface.h  ScorpDBSell.cpp  ScorpDBSell.h  ScorpExceptions.h  Tables.h
ScorpGUI/DB/sqlite/: ScorpDB.db
ScorpGUI/Map/: GraphicsObjectGroup.h  GraphicsObjectsGroup.h  LinkGraphicsObject.h  MapScene.cpp  MarkerObject.cpp  PointGraphicsObject.h  StateGraphicsObject.cpp  StateGraphicsObject.h
ScorpGUI/StationsList/: StationsListModel.h
documentation/documentation/uml diagrams/: SystemClassDiagram.puml
documentation/uml diagrams/: AddOperatorActivity.puml  AuthenticationState.puml  DeploymentDiagramm.puml  DiagrammComponents.puml  EditMapState.puml  GUI classes.puml  ObjectDiagramm.puml  PacketsDiagram.puml  SAD.docx  SDP.docx  SDPClassDiagramm.puml  SequenseDiagramm.puml  TestPlan.docx  UseCaseDiagram.puml  UserGuide(1).docx  Vision.doc  glossary.docx  iteration1.docx  planlaboration1.docx  project plan.xlsx  rolemap.docx  Мануал по установке.docx  ТЗПоезда.docx
exceptions/: ScorpCoreException.cpp  ScorpCoreException.h  ScorpDBException.cpp  ScorpDBException.h  ScorpException.h
include/: IdObjectWrapper.h  IntegralIdGenerator.h  MarkerWrapper.h  PetriNet.h  PetriNetTraits.h  StateWrapper.h  TypeListStorage.h  TypeStorage.h  list_of_memory_nodes.h  meta_utility.h  seglist_allocator.h
include/allocator/: ListOfMemoryNodes.h  SeglistAllocator.cpp  SeglistAllocator.h  StlAllocator.h  list_of_memory_nodes.h  seglist_allocator.h
include/container/: IdObjectWrapper.h  MarkerWrapper.h  PetriNet.h  PetriNetHelpers.h  PetriNetIterator.h  PetriNetStorage.h  PetriNetTraits.h  StateWrapper.h  TransitionWrapper.h  TypeStorage.h
include/container/internal/: PetriNetStorage.h  RandomMarkerPropagator.h  TypeList.h  TypeListStorage.h  TypeStorage.h
include/manipulator/: PositionValidator.h
include/meta/: All.h  ForEachLooper.h  RuntimeTypeSwitch.h  TypeEnum.h  TypeHolder.h  TypeList.h  TypeListStorage.h
lib/: CMakeLists.txt
lib/sqlite/: CMakeLists.txt
lib/sqlite/src/: Backup.cpp  Column.cpp  Database.cpp  Statement.cpp  Transaction.cpp
resource/: ScorpDB.db  ScorpRailwayNetDB.db  ScorpUserDB.db  icon.rc  test.txt
source/: CMakeLists.txt  main.cpp
source/Container/: CMakeLists.txt
source/Core/: CMakeLists.txt
source/Core/include/: ScorpCore.h  ScorpRoute.h  ScorpTime.h
source/Core/source/: MarkerCommandQueue.cpp  PetriNetComponents.cpp  PetriNetUsing.cpp  ScorpCore.cpp  ScorpRoute.cpp  ScorpTime.cpp
source/DB/: CMakeLists.txt
source/DB/source/: RailwayNetDBShell.cpp  RailwayNetDBShell.cpp.autosave  ScorpDBShell.cpp  UserDBObject.cpp  UserDBShell.cpp
source/Exceptions/: CMakeLists.txt
source/GUI/: CMakeLists.txt
source/GUI/include/: PetriNetComponents.h  PetriNetUsing.h  mainwindow.h
source/GUI/include/Map/: GraphicsObjectsGroup.h  LinkGraphicsObject.h  MapScene.h  PointGraphicsObject.h  StateGraphicsObject.h  TrackGraphicsObject.h  TransitionGraphicsObject.h
source/GUI/include/Scorp/GUI/: UserInfo.h  mainwindow.h
source/GUI/include/Scorp/GUI/Map/: GraphicsObjectsGroup.h  LinkGraphicsObject.h  MapScene.h  MapSceneStyle.h  MarkerCommandQueue.h  MarkerObject.h  PointGraphicsObject.h  StateGraphicsObject.h  TrackGraphicsObject.h  TransitionGraphicsObject.h
source/GUI/include/Scorp/GUI/StationsList/: StationsListModel.h  TreeModel.h
source/GUI/source/: PetriNetComponents.cpp  PetriNetUsing.cpp  UserInfo.cpp  main.cpp  mainwindow.cpp
source/GUI/source/Map/: GraphicsObjectsGroup.cpp  LinkGraphicsObject.cpp  MapScene.cpp  MapSceneStyle.cpp  MarkerCommandQueue.cpp  MarkerObject.cpp  PointGraphicsObject.cpp  StateGraphicsObject.cpp  TrackGraphicsObject.cpp  TransitionGraphicsObject.cpp
source/GUI/source/StationsList/: StationsListModel.cpp  TreeModel.cpp  TreeModelItem.cpp
test/: CMakeLists.txt  MarkerPropagationTest.cpp  PetriNetTest.cpp  TypeEnum.cpp
(+41 files in other folders)
